--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@angular/compiler-cli": "^4.0.0",
     "@angular/language-service": "^4.0.0",
     "@ngrx/store-devtools": "^4.0.0",
-    "@types/jasmine": "~2.5.53",
+    "@types/jasmine": "^2.5.54",
     "@types/jasminewd2": "~2.0.2",
     "@types/lodash": "^4.14.74",
     "@types/moment": "^2.13.0",
@@ -64,6 +64,7 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
+    "selenium-webdriver": "^3.5.0",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
     "typescript": "~2.3.3"
